Add @vercel/kv dependency

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@vercel/kv": "latest",
     "cors": "^2.8.5",
     "express": "^4.19.2"
   },
